Updating copy on landing page and blog post page
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/blog/individual-blog.component.html
+++ b/src/app/blog/individual-blog.component.html
@@ -37,19 +37,37 @@
     <div class="col-lg-2"></div>
     <div class="col-sm-12 col-md-12 col-lg-8">
       <div class="py-3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra massa et ante pretium, id volutpat lectus eleifend. Nulla facilisi. Pellentesque ante leo, sollicitudin at tempor non, condimentum eu quam. Nam iaculis at magna at cursus. Aliquam lectus nulla, condimentum id iaculis non, accumsan ac odio. Aliquam egestas velit ac condimentum pulvinar. Cras eu bibendum ipsum, vel sagittis dui. Nullam efficitur tortor eget luctus vestibulum.</p>
+        <p>If you haven’t noticed, times are tough for water facilities these days. Infrastructure is underfunded. Pumps are breaking. Pipes are bursting. The workforce is aging. And that’s just the start of it.</p>
       </div>
       <div class="py-3">
-        <p>Donec et mi lacinia, pellentesque mi ut, consectetur neque. Integer bibendum tempor facilisis. Pellentesque maximus tellus eu lectus convallis vehicula in ac metus. Vestibulum in lectus ex. Donec vestibulum commodo neque, efficitur pretium enim dapibus vitae. Aliquam ac mi egestas, sodales lacus at, fringilla odio. Curabitur at augue eros. Phasellus semper feugiat consequat. Vivamus viverra, eros sed ultrices finibus, leo dui maximus magna, in imperdiet turpis magna ac urna. Sed tincidunt turpis quis lacus dictum bibendum. Aenean eu sem vel nulla interdum semper nec ut nulla.</p>
+        <p>Most people don’t pay attention to it, but water infrastructure is the very foundation of society. If our water facilities don’t function properly, businesses can’t operate. Families don’t have access to clean drinking water. Farmers can’t water their crops. Our ability to move clean water so reliably to so many people is miraculous, but we can’t afford to take it for granted.</p>
       </div>
       <div class="py-3">
-        <p>Donec viverra quam sed libero sodales elementum at vitae augue. Suspendisse potenti. Quisque hendrerit sodales metus, eget hendrerit nibh condimentum quis. Nunc vitae mi interdum, lobortis quam quis, laoreet justo. Nulla vel purus eu sem vulputate mattis. Morbi mollis, lorem in mollis tempus, risus felis interdum metus, non tincidunt ante elit eu magna. Curabitur et arcu consequat, vestibulum purus in, mattis est. In gravida porttitor quam, non lobortis mi. Suspendisse potenti. Vivamus dolor turpis, ultrices commodo maximus non, fringilla in nisl. Vestibulum turpis mi, dapibus sit amet ultricies vitae, convallis eget dolor. Fusce non sem pulvinar, sodales nunc quis, iaculis neque. Aliquam ac magna et dolor vehicula aliquam id finibus turpis. Suspendisse in finibus eros. Nunc interdum sapien elit, sed aliquam tortor fringilla quis. Ut mi nunc, scelerisque et nibh sit amet, blandit interdum mauris.</p>
+        <p>We didn’t arrive at the current situation because of the fault of the water engineers. To the contrary, the engineers deserve all the credit in the world. It isn’t easy working with aging facilities, and things would be a lot worse without their talent and experience in operations.</p>
       </div>
       <div class="py-3">
-        <p>Praesent magna mi, dictum vel vestibulum vel, aliquam et dolor. Pellentesque sit amet ante lectus. Nam fringilla arcu eget risus lobortis, eu venenatis nisl vehicula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce eget ligula vitae diam finibus luctus a eu odio. Phasellus nec mauris congue, consectetur nulla nec, finibus eros. Nunc nec ligula ligula. Donec sed bibendum metus. Mauris bibendum scelerisque rhoncus. Aenean et dignissim elit.</p>
+        <p>Reality check: water infrastructure is expensive. So expensive, in fact, that it is three times as capital intensive as other utilities. Not to mention that water is undervalued and underpriced. Rate increases are needed to finance large new facilities, but if the political will in a community is opposed to paying more, it puts the future of new facilities in jeopardy.</p>
       </div>
       <div class="py-3">
-        <p>Curabitur in lectus faucibus, scelerisque ante non, tristique eros. Morbi vulputate nisi ex. Maecenas sit amet odio purus. Morbi imperdiet libero nec erat laoreet congue. Donec pretium rhoncus mi, eget sagittis mi ornare non. Quisque commodo eleifend urna, eget eleifend mi luctus nec. Fusce hendrerit viverra quam, tempus ultrices mauris laoreet a. In condimentum vel massa eget dictum.</p>
+        <p>We’ve seen what the worst case scenario looks like for water utilities when finances go wrong. The situation in Flint, Michigan arose because the city went bankrupt, and didn’t have the money to keep buying clean water from Detroit. So the local officials started pulling water from the polluted Flint River without proper treatment facilities, leading to biological contamination, and, ultimately, lead poisoning in the community.</p>
+      </div>
+      <div class="py-3">
+        <p>The American Society of Civil Engineers called for an investment of over a trillion dollars in water infrastructure over the next 25 years to ensure integrity of systems. In all likelihood, this won’t happen. Despite bipartisan support and popular opinion polls broadly supporting major investment in infrastructure, there is no evidence of an improvement in the situation. The Heritage Foundation noted that the current backlog of projects in the Army Corps of Engineers stands at $96 Billion; the recent water infrastructure law passed by Congress and signed into law will only add to the backlog.</p>
+      </div>
+      <div class="py-3">
+        <p>There is no solution for comprehensive investment at a local, state, and federal level. But even absent of political leadership, there is no reason to write off our facilities. Because there is still a lot that we can do to improve efficiency and operations. And we can invest in technology that drastically improves the way that we operate water infrastructure facilities in the United States, with better results for less money than ever before.</p>
+      </div>
+      <div class="py-3">
+        <p>The technological solutions are largely related to data, software, and artificial intelligence. Water utilities sit on massive datasets - including SCADA systems, GIS, billing, facility energy consumption, break reports, and more. More modern facilities are installing Advanced Metering Infrastructure - sophisticated systems to capture enormous amounts of data on customer demand and usage.</p>
+      </div>
+      <div class="py-3">
+        <p>That data is hugely valuable when paired with machine learning (ML) algorithms. ML can predict and prevent facility downtime, improve water quality, save money, defer asset investment, and so much more.</p>
+      </div>
+      <div class="py-3">
+        <p>This is important because most water utilities collect a lot of data, and aren’t using it. It is waiting to be processed and analyzed, and when that happens, the positive results could be staggering. Machine learning can improve bottom-line business results by as much as 20%.</p>
+      </div>
+      <div class="py-3">
+        <p>We may not have the money to replace our facilities (yet). But in the meantime, there is an unbelievable amount of potential in datasets to increase the resiliency of water infrastructure. It just needs to be paired with the algorithms, and the machine learning will do the rest of the work. More efficient operations, reduced risk, long term business value.</p>
       </div>
     </div>
     <div class="col-lg-2"></div>
@@ -59,12 +77,6 @@
     <div class="col-sm-12 col-md-12 col-lg-8 text-center">
       <p class="sharing-text">Like this article? Spread the word!</p>
       <div class="text-center">
-        <!-- <button type="button" class="btn tweet-color">
-          <i class="fab fa-twitter pr-3" style="color: #FFFFFF;"></i>Tweet
-        </button> -->
-        <!-- <button type="button" class="btn facebook-color">
-          <i class="fab fa-facebook-f pr-3" style="color: #FFFFFF;"></i>Share
-        </button> -->
         <button class="btn" style="color: #FFFFFF;" shareButton="twitter" [style.backgroundColor]="share.prop.twitter.color">
           <i class="fab fa-twitter pr-3" style="color: #FFFFFF;"></i>Tweet
         </button>
@@ -93,6 +105,17 @@
         <h4 class="py-2">Machine Learning for Clean Water</h4>
         <p class="read-more">Read More</p>
       </div>
+    </div>
+  </div>
+</div>
+<div class="footer-section py-3">
+  <div class="social-footer-inner">
+    <div class="row">
+      <div class="col-lg-2"></div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 text-align-center">
+        <p class="all-rights-reserved mt-5">Copyright &copy; 2018 Aqueduct Inc. All Rights Reserved.</p>
+      </div>
+      <div class="col-lg-2"></div>
     </div>
   </div>
 </div>
