--- a/src/app/landing-pages/water-utility.component.html
+++ b/src/app/landing-pages/water-utility.component.html
@@ -8,8 +8,8 @@
 <div class="container">
   <div class="row align-items-center align-content-center py-3">
     <div class="col-sm-12 col-md-12 col-lg-8 py-3">
-      <h1 class="header-headline py-2">Machine Learning to Increase the Resiliency of Your Water Utility</h1>
-      <h5 class="aqueduct-primary-color py-2">Learn How Machine Learning Can Benefit Your Water Utility.</h5>
+      <h1 class="header-headline py-2">Artificial Intelligence to Increase the Resiliency of Your Water Utility</h1>
+      <h5 class="aqueduct-primary-color py-2">Learn How Artificial Intelligence Can Benefit Your Water Utility.</h5>
     </div>
     <div class="col-sm-12 col-md-12 col-lg-4 py-3">
       <div class="card p-3">
@@ -52,7 +52,7 @@
 </div>
 <div class="row p-3 aqueduct-features-section">
   <div class="col-sm-12 col-md-12 col-lg-12 text-align-center py-3">
-    <p class="features-header">Aqueduct's Machine Learning Software Can Help You:</p>
+    <p class="features-header">Aqueduct's AI and Machine Learning Software Can Help You:</p>
   </div>
   <div class="col-sm-12 col-md-12 col-lg-4 text-align-center py-3">
     <div class="py-2">
