--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -67,3 +67,14 @@
     </div>
   </div>
 </div>
+<div class="footer-section py-3">
+  <div class="social-footer-inner">
+    <div class="row">
+      <div class="col-lg-2"></div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 text-align-center">
+        <p class="all-rights-reserved mt-5">Copyright &copy; 2018 Aqueduct Inc. All Rights Reserved.</p>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+  </div>
+</div>
