Updating spacing on landing pages
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/landing-pages/wastewater-facility.component.html
+++ b/src/app/landing-pages/wastewater-facility.component.html
@@ -8,8 +8,8 @@
 <div class="container">
   <div class="row align-items-center align-content-center py-3">
     <div class="col-sm-12 col-md-12 col-lg-8 py-3">
-      <h1 class="header-headline py-2">Artificial Intelligence to Increase the Resiliency of Your Wastewater Facility</h1>
-      <h5 class="aqueduct-primary-color py-2">Learn How Artificial Intelligence Can Benefit Your Wastewater Facility.</h5>
+      <h1 class="header-headline py-4">Artificial Intelligence to Increase the Resiliency of Your Wastewater Facility</h1>
+      <h5 class="aqueduct-primary-color py-4">Learn How Artificial Intelligence Can Benefit Your Wastewater Facility.</h5>
     </div>
     <div class="col-sm-12 col-md-12 col-lg-4 py-3">
       <div class="card p-3">
@@ -87,10 +87,10 @@
     </div>
     <div class="col-sm-12 col-md-12 col-lg-6 p-3">
       <ul class="aqueduct-secondary-color">
-        <li>Meet with your team to understand the business context and requirements for the goals you would like to achieve.</li>
-        <li>Identify and isolate the most important variables and standardize the datasets in a readable format for our models.</li>
-        <li>Evaluate each model based on relevant performance metrics and subsequently tune the model in order to achieve the best results with the highest confidence.</li>
-        <li>Make predictions on live data regarding how to best optimize inputs for the most favorable outcomes, easily accessible through our customer dashboard.</li>
+        <li class="py-3">Meet with your team to understand the business context and requirements for the goals you would like to achieve.</li>
+        <li class="py-3">Identify and isolate the most important variables and standardize the datasets in a readable format for our models.</li>
+        <li class="py-3">Evaluate each model based on relevant performance metrics and subsequently tune the model in order to achieve the best results with the highest confidence.</li>
+        <li class="py-3">Make predictions on live data regarding how to best optimize inputs for the most favorable outcomes, easily accessible through our customer dashboard.</li>
       </ul>
     </div>
     <div class="col-sm-12 col-md-12 col-lg-6 p-3">
