Updating stat on home page
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,9 +66,9 @@
       </div>
       <div class="col-lg-5 order-2 order-md-12 text-align-center py-5">
         <!-- <img src="../../assets/img/aqueduct_stat_10.png" class="leak-stat float-md-right"> -->
-        <img *ngIf="!statFlipped" [class.flip-out-ver-left]="statFlipped" [class.flip-in-ver-right]="!statFlipped" src="../../assets/img/aqueduct_stat_10.png"
+        <img *ngIf="!statFlipped" [class.flip-out-ver-left]="statFlipped" [class.flip-in-ver-right]="!statFlipped" src="../../assets/img/drinking_water_stat.png"
           class="leak-stat float-md-right" (click)="flipStat()">
-        <img *ngIf="statFlipped" [class.flip-out-ver-left]="!statFlipped" [class.flip-in-ver-right]="statFlipped" src="../../assets/img/stat_source.png"
+        <img *ngIf="statFlipped" [class.flip-out-ver-left]="!statFlipped" [class.flip-in-ver-right]="statFlipped" src="../../assets/img/drinking_water_source.png"
           class="leak-stat float-md-right" (click)="flipStat()">
       </div>
     </div>
