Publishing first blog post
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/blog/individual-blog.component.html
+++ b/src/app/blog/individual-blog.component.html
@@ -2,14 +2,14 @@
 <div class="container">
   <div class="row py-3 mt-5">
     <div class="col-12 text-center">
-      <h1 class="header-headline">Human Health and the Wastewater Connection</h1>
+      <h1 class="header-headline">The Technological Solution for Aging Water Infrastructure</h1>
     </div>
   </div>
   <div class="row py-3">
     <div class="col-lg-2"></div>
     <div class="col-sm-12 col-md-12 col-lg-8">
       <p class="header-paragraph text-center">
-        Using chemicals and bacteria identified in wastewater treatment aeration tanks, communities can identify and improve patterns of their citizens' health.
+        Utilizing the vast amount of data currently being collected, water utilities and wastewater treatment facilities can increase the resiliency of water infrastructure.
       </p>
     </div>
     <div class="col-lg-2"></div>
@@ -18,7 +18,7 @@
     <div class="col-lg-2"></div>
     <div class="col-sm-12 col-md-12 col-lg-8">
       <div class="text-center pb-2">
-        <img src="https://via.placeholder.com/80x80" class="profile-image img-fluid text-center">
+        <img src="../../assets/img/Jeff_Cropped.jpeg" height="80" width="80" class="profile-image img-fluid text-center">
       </div>
       <p class="header-paragraph text-center italics-font">
         by Jeff Pawlak
@@ -87,7 +87,7 @@
     </div>
     <div class="col-lg-2"></div>
   </div>
-  <div class="row py-3 my-5">
+  <!-- <div class="row py-3 my-5">
     <div class="col-sm-12 col-md-12 col-lg-4">
       <div class="blog-post-3-card cursor-pointer" (click)="navigateToIndividualBlogPost()">
         <h4 class="py-2">Reaching Best Efficiency Points</h4>
@@ -106,7 +106,7 @@
         <p class="read-more">Read More</p>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <div class="footer-section py-3">
   <div class="social-footer-inner">
