--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -33,6 +33,14 @@
     <div class="col-lg-4"></div>
   </div>
   <div class="row py-3 my-5">
+    <div class="col-sm-12 col-md-12 col-lg-12">
+      <div class="blog-post-1-card cursor-pointer" (click)="navigateToFirstBlogPost()">
+        <h4 class="py-2">The Technological Solution for Aging Water Infrastructure</h4>
+        <p class="read-more">Read More</p>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="row py-3 my-5">
     <div class="col-sm-12 col-md-12 col-lg-8">
       <div class="blog-post-1-card cursor-pointer" (click)="navigateToIndividualBlogPost()">
         <h4 class="py-2">Our Pilot with Fairfield-Suisun</h4>
@@ -45,8 +53,8 @@
         <p class="read-more">Read More</p>
       </div>
     </div>
-  </div>
-  <div class="row py-3 my-5">
+  </div> -->
+  <!-- <div class="row py-3 my-5">
     <div class="col-sm-12 col-md-12 col-lg-4">
       <div class="blog-post-3-card cursor-pointer" (click)="navigateToIndividualBlogPost()">
         <h4 class="py-2">Reaching Best Efficiency Points</h4>
@@ -65,7 +73,7 @@
         <p class="read-more">Read More</p>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <div class="footer-section py-3">
   <div class="social-footer-inner">
