Adding second blog post
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -32,28 +32,28 @@
     </div>
     <div class="col-lg-4"></div>
   </div>
+  <!-- <div class="row py-3 my-5">
+    <div class="col-sm-12 col-md-12 col-lg-12" *ngFor="let post of blogPosts">
+      <div class="blog-post-1-card cursor-pointer" (click)="navigateToFirstBlogPost()">
+        <h4 class="py-2">{{ post.title }}</h4>
+        <p class="read-more">Read More</p>
+      </div>
+    </div>
+  </div> -->
   <div class="row py-3 my-5">
-    <div class="col-sm-12 col-md-12 col-lg-12">
+    <div class="col-sm-12 col-md-12 col-lg-8">
       <div class="blog-post-1-card cursor-pointer" (click)="navigateToFirstBlogPost()">
         <h4 class="py-2">The Technological Solution for Aging Water Infrastructure</h4>
         <p class="read-more">Read More</p>
       </div>
     </div>
-  </div>
-  <!-- <div class="row py-3 my-5">
-    <div class="col-sm-12 col-md-12 col-lg-8">
-      <div class="blog-post-1-card cursor-pointer" (click)="navigateToIndividualBlogPost()">
-        <h4 class="py-2">Our Pilot with Fairfield-Suisun</h4>
-        <p class="read-more">Read More</p>
-      </div>
-    </div>
     <div class="col-sm-12 col-md-12 col-lg-4">
-      <div class="blog-post-2-card cursor-pointer" (click)="navigateToIndividualBlogPost()">
-        <h4 class="py-2">The Perils of Energy and Water</h4>
+      <div class="blog-post-2-card cursor-pointer" (click)="navigateToSecondBlogPost()">
+        <h4 class="py-2">Farmer vs. Fish: Water Crisis in California</h4>
         <p class="read-more">Read More</p>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- <div class="row py-3 my-5">
     <div class="col-sm-12 col-md-12 col-lg-4">
       <div class="blog-post-3-card cursor-pointer" (click)="navigateToIndividualBlogPost()">
