--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
       </li>
       <li class="nav-item navbar-link-item">
         <!-- <div class="nav-link navbar-link-item" (click)="scrollToPageSection('how-it-works')">How It Works</div> -->
-        <div class="nav-link navbar-link-item" (click)="navigateToHomePage('how-it-works')">How It Works</div>
+        <div class="nav-link navbar-link-item" (click)="navigateToOurProcess()">How It Works</div>
       </li>
       <li class="nav-item navbar-link-item">
         <div class="nav-link navbar-link-item" (click)="navigateToBlog()">Our Blog</div>
